Arreglando detalles | Lógica

--- a/4º Año/Bases de Datos/Unidad 8/2. Indices e Indexacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/2. Indices e Indexacion.md
@@ -52,9 +52,9 @@ En este contexto, la estructura de índice de árbol B⁺ es la más utilizada e
 >- Grado de los Nodos Intermedios:
 >$$(p \cdot P_a) + ((p - 1) \cdot K) \leq B$$
 >- Grado de los Nodos Hoja:
->$$((p - 1) \cdot (P_r + K)) + P_a \leq B)$$
+>$$((p_{hoja} - 1) \cdot (P_r + K)) + P_a \leq B)$$
 >
->En donde $p$ es el grado del nodo, $P_a$ es el tamaño del puntero a otro nodo del árbol, $P_r$ el tamaño del puntero a registro, $K$ el tamaño de la clave de búsqueda y $B$ el tamaño del bloque.
+>En donde $p$ y $p_{hoja}$ es el grado de los nodos intermedios y hojas respectivamente, $P_a$ es el tamaño del puntero a otro nodo del árbol, $P_r$ el tamaño del puntero a registro, $K$ el tamaño de la clave de búsqueda y $B$ el tamaño del bloque.
 
 Utilizar esta estructura de datos implica una reducción en el rendimiento al insertar y al borrar datos, además de ocupar espacio adicional. Aun así, este tiempo adicional es aceptable incluso en archivos con altas frecuencias de modificación, ya que este tipo de estructuras evitan una reorganización masiva o total del archivo. En pocas palabras, un ***índice de árbol B⁺*** es un índice multinivel en el cual todos sus nodos internos tienen la siguiente forma:
 $$
@@ -96,3 +96,7 @@ Para la eliminación de un registro, primero se realiza una búsqueda para encon
 ## Índices de Árbol B
 Los ***índices de árbol B*** son similares a los índices de árbol B⁺, con una leve diferencia en sus enfoques, ya que los árboles B eliminan el almacenamiento redundante de los valores de la clave de búsqueda, puesto que las claves de búsqueda no están repetidas en el árbol B, disminuyendo el espacio empleado para almacenar el índice. Sin embargo, como las claves de búsqueda que aparecen en los nodos internos no aparecen en ninguna otra parte del árbol B, se debe incluir un campo adicional para un puntero a datos por cada clave de búsqueda de un nodo interno, estos campos adicionales apuntan a registros del archivo o a los cajones de la clave de búsqueda asociada. En otras palabras, el grado de los árboles B va a ser menor a los del los árboles B⁺.
 Una de las principales desventajas de los árboles B es que en caso de que se utilice dicho índice para buscar múltiples registros, se tendrá que hacer el recorrido del árbol para cada uno de estos registros, mientras que en los árboles B⁺ solo se debe ir hasta las hojas y luego recorrerlas de forma secuencial, lo que ahorra más tiempo.
+>[!note] Cálculo del Grado de los nodos de los Árboles B
+>Debido en parte a que este tipo de estructura de datos no posee redundancia de información y tanto los nodos intermedios como las hojas pueden apuntar a un registro de datos, la fórmula para calcular el grado de los nodos cambia ligeramente:
+>$$(p \cdot P_a) + ((p - 1) + (K + P_r)) \leq B$$
+>En donde $p$ es el grado del nodo, $P_a$ es el tamaño del puntero a otro nodo del árbol, $P_r$ el tamaño del puntero a registro, $K$ el tamaño de la clave de búsqueda y $B$ el tamaño del bloque.
