--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
@@ -8,7 +8,7 @@ Un ***argumento*** puede definirse como una *secuencia de sentencias*, una de la
 > 
 >La veracidad de dicha sentencia depende del agente que la pronuncie, el cual se considera constante, así como el contexto general en el que se enuncian estas sentencias. Estas sentencias con un significado fijo se denominan ***proposiciones***.
 
-Un argumento se considera bueno siempre y cuando sus premisas sean verdaderas y el razonamiento es ***válido***. La idea de validez de un argumento desde el punto de vista clásico es simple, un argumento es válido si no es posible que las premisas sean verdaderas y la conclusión sea falsa. Es decir, no se puede imaginar en una situación en la que las premisas sean verdaderas y la conclusión no. En tal caso estaríamos ante un argumento **inválido**.
+Un argumento se considera bueno siempre y cuando sus premisas sean verdaderas y el razonamiento es ***válido***. La idea de validez de un argumento desde el punto de vista clásico es simple, un argumento es válido si no es posible que las premisas sean verdaderas y la conclusión sea falsa. En tal caso estaríamos ante un argumento **inválido**.
 Un argumento puede ser válido, pero aún puede ser un mal argumento, para ello basta con que se apoye en una o más premisas falsas. Tales argumentos se consideran válidos pero no ***sensatos***. Un argumento es sensato si es válido y además todas sus premisas son verdaderas, de este modo nos quedaría la siguiente disyuntiva:
 ![[argumento-insensato.png]]
 
@@ -55,7 +55,7 @@ Las expresiones pueden contener la cantidad de caracteres repetidos que se quier
 Un lenguaje en este contexto no es más que un conjunto de expresiones, más concretamente decimos que un lenguaje sobre el alfabeto $A$ es cualquier subconjunto de $A^*$. Consideremos que nuestro alfabeto está constituido de la siguiente forma $A = \{a, b, c\}$, en este caso un lenguaje sobre este alfabeto podría ser $L_1 = \{aa, ba, bb, ca, c\}$, pero también lo podría ser $L_2 = \{b, ab, bcc\}$.
 ### Teoría de Pruebas
 Usualmente, esta teoría consiste de un conjunto de ***Reglas de Inferencia***. Cada una de estas reglas de inferencia es un patrón de argumentación, o de razonamiento reconocido como correcto. Es posible que la teoría de prueba y la semántica no se adecuen.
-Si la teoría de pruebas solo infiere respuestas correctas en acuerdo con la semántica se dice que es ***sana, sensata o sólida***. Si dicha teoría de pruebas además genera todas las respuestas correctas se dice que la misma es ***completa***.
+Si la teoría de pruebas solo infiere respuestas correctas de acuerdo con la semántica se dice que es ***sana, sensata o sólida***. Si dicha teoría de pruebas además genera todas las respuestas correctas se dice que la misma es ***completa***.
 Formalmente, decimos que una teoría formal $\mathcal{T}$ está constituido por:
 1. Un conjunto contable de símbolos. Se llamará expresión a toda secuencia finita de símbolos.
 2. Un subconjunto de expresiones denominadas ***Fórmulas Bien Formadas (FBF)***.
