--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proposicional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proposicional.md
@@ -1,6 +1,6 @@
 
 Al analizar la estructura de los ***argumentos*** se reconoció la existencia de ciertas unidades atómicas que lo conforman. Estos átomos pueden combinarse para integrarse en bloques más complejos, a su vez estos bloques pueden utilizarse para conformar estructuras aún más complejas. Una observación de gran importancia surge al descubrir que la forma en que se combinan los átomos es de naturaleza algebraica, es decir, podemos expresar operaciones de forma abstracta mediante símbolos.
-En lógica, estas unidades básicas o entidades se denominan sentencias. En correspondencia con la observación de que la estructura puede ser elemental o compleja aparecen las ***sentencias atómicas*** y ***sentencias compuestas***. Existen sentencias de las cuales es posible decidir su veracidad o su falsedad, este tipo de sentencias reciben el nombre de ***proposiciones***. Aunque también existen sentencias las cuales no es posible considerar si son falsas o verdaderas.
+En lógica, estas unidades básicas o entidades se denominan sentencias. Existen sentencias de las cuales es posible decidir su veracidad o su falsedad, este tipo de sentencias reciben el nombre de ***proposiciones***. Aunque también existen sentencias las cuales no es posible considerar si son falsas o verdaderas.
 >[!tldr] Inconsistencia de las Proposiciones
 >Dado un conjunto de proposiciones, se dice que el conjunto es ***consistente*** si todas las proposiciones son verdaderas, de caso contrario el conjunto se dice ***inconsistente***.
 
@@ -16,7 +16,7 @@ Con fin de introducirnos más en profundidad en los conceptos de la lógica prop
 	- Todas las letras proposicionales.
 	- Si $P$ y $Q$ son fórmulas bien formadas, entonces $(¬P)$, $(P \rightarrow Q)$ también son fórmulas bien formadas (fórmulas compuestas).
 
-Si bien el alfabeto original permite construir todas las operaciones lógicas utilizando únicamente los conectivos lógicos anteriormente nombados, se puede apicar ciertas reglas de reescritura con fin facilitar la escritura de fórmulas y evitar una complejidad innecesaria, se aceptan las siguientes reglas de reescritura:
+Si bien el alfabeto original permite construir todas las operaciones lógicas utilizando únicamente los conectivos lógicos anteriormente expuestos, se puede aplicar ciertas reglas de reescritura con fin facilitar la escritura de fórmulas y evitar complejidades innecesarias, se aceptan las siguientes reglas de reescritura:
 - $(P \wedge Q)$ se escribe como $(¬(P \rightarrow (¬Q)))$.
 - $(P \vee Q)$ se escribe como $((¬P) \rightarrow Q)$.
 - $(P \equiv Q)$ se escribe como $((P \rightarrow Q) \wedge (Q \rightarrow P))$.
@@ -35,16 +35,16 @@ Para simplificar el lenguaje diremos que una fórmula bien formada es verdadera 
 ![[tabla-verdad-ejemplo.png]]
 
 Para este caso no podemos decir que esta fórmula bien formada es verdadera ni falsa, ya que su valor depende del contexto, es decir, estamos ante la presencia de una contingencia.
-Podemos tomar a cada línea de la tabla de verdad como la representación de una clase de interpretación de esta fórmula. Una interpretación en la que una fórmula bien formada $P$ es verdadera se dice que es un modelo para esa fórmula bien formada. Dado un conjunto $S$ de fórmulas bien formadas, una interpretación de este conjunto es un modelo del mismo si y solo si es un modelo para cada una de las fórmulas bien formadas que lo integran. Por ejemplo $A \equiv ¬(¬A)$, ya que coinciden en todas las interpretaciones posibles, es decir, poseen la misma tabla de verdad.
+Podemos tomar a cada línea de la tabla de verdad como la representación de una clase de interpretación de esta fórmula. Una interpretación en la que una fórmula bien formada $P$ es verdadera se dice que es un modelo para esa fórmula bien formada. Dado un conjunto $S$ de fórmulas bien formadas, una interpretación de este conjunto es un modelo del mismo si y solo si es un modelo para cada una de las fórmulas bien formadas que lo integran. Por ejemplo, $A \equiv ¬(¬A)$, dado que coinciden en todas las interpretaciones posibles, es decir, poseen la misma tabla de verdad.
 ### Conectivos, Tautologías y Contradicciones
-Los conectivos proporcionales son funciones lógicas que tomas argumentos del conjunto $\{V, F\}$ y devuelven un resultado en $\{V, F\}$. En caso del lenguaje $\mathcal{L}$, solo $¬$ es unario mientras que el resto son operadores binarios, podría haber funciones de más argumentos, en la cual la tabla de verdad, para $N$ argumentos, requerirá $2^N$ líneas.
+Los conectivos proporcionales son funciones lógicas que tomas argumentos del conjunto $\{V, F\}$ y devuelven un resultado en $\{V, F\}$. En caso del lenguaje $\mathcal{L}$, solo $¬$ es unario, mientras que el resto son operadores binarios, aunque podría haber funciones de más argumentos, en la cual la tabla de verdad, para $N$ argumentos, requerirá $2^N$ líneas.
 >[!tldr] Conjunto Suficiente de Colectivos
 >Un conjunto de conectivos $S$ será un conjunto suficiente de conectivos, si toda función lógica puede ser expresado en términos de los conectivos del conjunto $S$.
 >1. **Teorema**: $\{¬, \wedge, \vee\}$ es un conjunto suficiente de conectivos.
 >2. **Teorema**: $\{ \rightarrow, ¬\}$ es un conjunto suficiente de conectivos. ^conjunto-suficiente-conectivos
 
 Una fórmula bien formada es ***satisfacible*** si es verdadera bajo alguna interpretación. Si dicha fórmula bien formada es siempre verdadera bajo todas sus posibles interpretaciones, dicha fórmula es ***lógicamente válida*** o tautológica. Por otro lado, una fórmula bien formada es ***insatisfacible*** o una contradicción si es falsa bajo todas sus interpretaciones posibles, este tipo de fórmulas se denota con el símbolo $\perp$.
-Para verificar si una sentencia lógicamente válida es ***decidible***, solo hay que ver si su tabla de verdad da el valor de verdad $V$ para todas sus combinaciones o interpretaciones. Una forma de hacerlo es construir la tabla de verdad y corroborar que se cumpla la condición. Existen formas más económicas para decidir si una fórmula bien formada es una tautología o no, el proceso empieza por intentar hacer falsa a la fórmula bien formada. Para ello se observa cuál es el conectivo principal y a partir de él se ve como es posible, de acuerdo a la tabla de verdad del conectivo, como asignar valores de verdad que la hagan falsa.
+Para verificar si una sentencia lógicamente válida es ***deducible***, solo hay que ver si su tabla de verdad da el valor de verdad $V$ para todas sus interpretaciones. Una forma de hacerlo es construir la tabla de verdad y corroborar que se cumpla la condición. Existen formas más económicas para decidir si una fórmula bien formada es una tautología o no, el proceso empieza por intentar hacer falsa a la fórmula bien formada. Para ello se observa cuál es el conectivo principal y a partir de él se ve como es posible, de acuerdo a la tabla de verdad del conectivo, como asignar valores de verdad que la hagan falsa.
 ### Deducción en la Lógica Proposicional
 La deducción en la lógica proposicional es un poco diferente a la presentada en la unidad anterior aunque parte de la misma base, para comenzar se propone una serie de esquemas de axiomas que garantiza la tautología de cualquier fórmula bien formada y una regla de inferencia que puede ser mediante ***modus ponens*** o ***modus tollens***.
 - **Esquema de Axiomas**:
