--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Deduccion y Computacion del Calculo Proposicional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Deduccion y Computacion del Calculo Proposicional.md
@@ -34,7 +34,7 @@ Cualquier fórmula bien formada $S$ puede transformarse en una fórmula bien for
 - $P \wedge \tau$ se reduce a $P$.
 - $P \wedge \Box$ se reduce a $\Box$.
 
-Estas propiedades nos permiten transformar una fórmula bien formada en forma normal conjuntiva, si queremos que también sea reducida debemos asegurar que ninguna de las letras proposicionales aparezca más de una vez dentro del alcance de $\vee$, podemos eliminar estas repeticiones aplicando las siguientes equivalencias:
+Estas propiedades nos permiten transformar una fórmula bien formada cualquiera en otra que esté en forma normal conjuntiva, si se desea que la misma también sea reducida debemos asegurar que ninguna de las letras proposicionales que forma parte de una cláusula aparezca más de una vez dentro del alcance de $\vee$, podemos eliminar estas repeticiones aplicando las siguientes equivalencias:
 - $A \vee A$ se reduce a $A$.
 - $¬A \vee ¬A$ se reduce a $¬A$.
 - $A \vee ¬A$ se reduce a $\tau$.
@@ -47,9 +47,9 @@ Dado un conjunto de cláusulas $S$, una deducción por resolución de la cláusu
 2. Todo $B_i$ o es elemento de $S$ o $B_i$ es una resolvente de $B_p$ y $B_k$ con $p, k < i$. 
 
 Una deducción por resolución de la cláusula vacía $\Box$ a partir de $S$ se llama refutación por resolución de $S$ o simplemente refutación de $S$.
-Esto se puede utilizar para probar teoremas, ya que se puede utilizar la prueba de consistencia para verificar que dicha sentencia es un teorema, el procedimiento comenzaría con negar la sentencia y corroborar que la resolución da una cláusula vacía. Si esto es así entonces la sentencia es un teorema, de lo contrario esto solo sería una sentencia.
+Esto se puede utilizar para probar teoremas, ya que se puede utilizar la prueba de consistencia para verificar que dicha sentencia es un teorema, el procedimiento comenzaría con negar la sentencia y corroborar que la resolución da una cláusula vacía. Si esto es así, entonces la sentencia es un teorema, de lo contrario esto solo sería una sentencia.
 #### Cláusulas de Horn
-Una cláusula de Horn es una cláusula con a lo suma un literal positivo $¬A \vee \cdots \vee ¬A_N \vee B_1$. Estas se puede reescribir de la siguiente manera:
+Una cláusula de Horn es una cláusula que posee a lo suma un literal positivo $¬A \vee \cdots \vee ¬A_N \vee B_1$. Estas se puede reescribir de la siguiente manera:
 1. $¬(A \wedge \cdots \wedge A_n) \vee B_1$.
 2. $(A \wedge \cdots \wedge A_n) \rightarrow B_1$.
 3. $B_1 \leftarrow (A \wedge \cdots \wedge A_n)$.
@@ -66,25 +66,24 @@ La primera y segunda cláusula se dicen definidas, aunque la primera recibe el n
 >Veamos esto con un ejemplo, si queremos probar que $A$ se deduce de $P = \{¬B \vee A, B\}$, entonces negamos la consulta quedándonos $¬A$ y $P \cup \{¬A\}$ lo que nos ayudará en la refutación. Si querríamos expresar esto en una cláusula de Horn nos quedaría $\leftarrow Q$. 
 ## Completitud y Computabilidad del Cálculo Proposicional
 Hemos descrito el método de resolución proposicional, que permite generar refutaciones de un conjunto de cláusulas. Al refutar dichas cláusulas, demostramos que su conjunción es contradictoria, es decir, imposible de satisfacer.
-El concepto de resolvente fija se refiere a una cláusula $C$, que actúa como la resolvente de un par de cláusulas de un conjunto $S$. Si $C$ es una resolvente fija de un par de cláusulas de $S$, denotado como $S \longrightarrow C$. Usaremos la notación $S \stackrel{*}{\longrightarrow} C$ cuando exista una deducción por resolución de $C$ a partir de $S$. Asimismo, $S \stackrel{*}{\longrightarrow} \square$ indica que existe una deducción por resolución de la contradicción, es decir de la refutación de $C$ a partir de $S$.
-Para entender lo anterior tengamos en cuenta el siguiente conjunto $S = \{ P \lor Q, \neg P \lor R, ¬Q \lor R \}$, podemos deducir $R$ por resolución, es decir, $S \stackrel{*}{\longrightarrow} R$. Para ello podemos refutar $R$ agregando su negación al conjunto $S$ y aplicando resolución, en ese caso nuestro nuevo conjunto estaría conformado de la siguiente manera $S = \{ P \lor Q, \neg P \lor R, \neg Q \lor R, \neg R \}$. Dicho conjunto es refutable, ya que $S \stackrel{*}{\longrightarrow} \square$, por lo tanto, $R$ es deducible en $S$.
+El concepto de resolvente fija se refiere a una cláusula $C$, que actúa como la resolvente de un par de cláusulas de un conjunto $S$. Si $C$ es una resolvente fija de un par de cláusulas de $S$, denotado como $S \longrightarrow C$. Usaremos la notación $S \stackrel{*}{\longrightarrow} C$ cuando exista una deducción por resolución de $C$ a partir de $S$. Asimismo, $S \stackrel{*}{\longrightarrow} \square$ indica que existe una deducción por resolución de la contradicción, es decir, existe una refutación de $C$ a partir de $S$.
+Para entender lo anterior tengamos en cuenta el siguiente conjunto $S = \{ P \lor Q, \neg P \lor R, ¬Q \lor R \}$, del cual se quiere deducir $R$ por resolución, es decir, $S \stackrel{*}{\longrightarrow} R$. Para ello podemos refutar $R$ agregando su negación al conjunto $S$ y aplicando resolución, en ese caso el nuevo conjunto estaría conformado de la siguiente manera $S = \{ P \lor Q, \neg P \lor R, \neg Q \lor R, \neg R \}$. Dicho conjunto es refutable, ya que $S \stackrel{*}{\longrightarrow} \square$, por lo tanto, $R$ es deducible en $S$.
 Como mostramos en el ejemplo anterior, si bien a partir de un conjunto de cláusulas $S$ se puede deducir por resolución una cláusula $C$, la deducción no necesariamente es única. En el ejemplo antes dado podemos refutar $R$ de dos formas posibles. Por lo tanto, lo óptimo sería desarrollar un método algorítmico para verificar si el conjunto $S$ es refutable. El procedimiento ya existe y es el siguiente.
 ![[procedimiento-refutacion.png]]
 
 Dado un conjunto $S$ de cláusulas, definimos $\Re(S)$ como la unión de $S$ con el conjunto de todas las resolventes fijas de la cláusula $S$, formalmente denotado:
 $$\Re(S) = S \cup \{C : C \ \text{es una resolvente de } C_1 \text{ y } C_2 \ / \ C_1, C_2 \in S\}$$
 
-Definimos entonces a la aplicación de $\Re$ de la siguiente manera:
+Definimos entonces a la aplicación reiterada del operador $\Re$ de la siguiente manera:
 $$
 \begin{flalign*}
 & \Re^0(S) = S &&\\
 & \Re^{n + 1}(S) = \Re(\Re^n(S)) &&\\
 \end{flalign*}
 $$
-Notamos que para cualquier $S$ se cumple lo siguiente:
+Notamos que para cualquier conjunto $S$ la aplicación sucesiva del operador $\Re$ produce una secuencia creciente, en el sentido de la inclusión de conjuntos, es decir:
 $$S = \Re^0(S) \subseteq \Re^1(S) \subseteq \Re^2(S) \subseteq \dots \subseteq \Re^n(S)$$
-
-Es decir, la aplicación sucesiva del operador $\Re$ produce una secuencia creciente, en el sentido de la inclusión de conjuntos. La razón es que si $X$ es un conjunto cualquiera de sentencias, el conjunto $\Re(X)$ es el resultado de agregar a $X$ las resolventes que se calcularon a partir de las cláusulas que contiene el conjunto inicial.
+La razón por la que esto sucede es porque si $X$ es un conjunto cualquiera de sentencias, el conjunto $\Re(X)$ es el resultado de agregar a $X$ las resolventes que se calcularon a partir de las cláusulas que contiene el conjunto inicial.
 Si nos planteamos la posibilidad de que esa secuencia termine, es decir si es posible llegar a un punto donde $\Re^m(S) = \Re^k(S)$ para todo $k > m$ este sería un ***punto fijo*** del operador $\Re$. Nótese que si una secuencia creciente tiene una cota superior, entonces la secuencia tiene un límite.
 Una cota posible para el conjunto $S$ presentado anteriormente podría ser $S^*$, es decir el conjunto de todas las posibles cláusulas que se pueden construir con los literales que aparecen en $S$. Esto quiere decir que la secuencia generada por $\Re$ sobre cualquier conjunto $S$ termina en un cierto valor de $n$, es decir la operación de la resolvente se cierra luego de un determinado número finito de pasos. Por lo tanto, dado cualquier conjunto $S$ de cláusulas, la proposición $S \stackrel{*}{\longrightarrow} \square$ es ***decidible***.
 ## Resultados Meta-Teóricos
