--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 3/1. Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 3/1. Calculo de Predicados.md
@@ -11,8 +11,8 @@ Esta expresividad le permite al cálculo de predicados expresar relaciones que e
 El lenguaje $P$ definido para el cálculo de predicados consta de los siguientes elementos:
 1. **Letras Predicativas:** Conjunto contable no vacío de letras predicativas $p_k^n$ para todo $k$ y $n$ natural.
 2. **Letras Funcionales:** Conjunto contable y posiblemente vacío de letras funcionales $f_k^n$ para todo $k$ y $n$ natural.
-3. **Variables:** Conjunto numerable de variables $x, y, z, x_1, x_2, \cdots$, generalmente se utilizan las últimas letras del abecedario para denotar a las variables.
-4. **Constantes:** Conjunto numerable y posiblemente vacío de constantes $a, b, c, a_1, a_2, \cdots$, generalmente se utiliza las primeras letras del abecedario para denotar a las constantes.
+3. **Variables:** Conjunto numerable de variables $x, y, z, x_1, x_2, \dots$, generalmente se utilizan las últimas letras del abecedario para denotar a las variables.
+4. **Constantes:** Conjunto numerable y posiblemente vacío de constantes $a, b, c, a_1, a_2, \dots$, generalmente se utiliza las primeras letras del abecedario para denotar a las constantes.
 5. **Conectivos lógicos:** $\{¬; \rightarrow; \forall\}$, el resto de conectivos y operadores se pueden construir a partir de esos tres conectivos, aunque por cuestiones de practicidad se pueden utilizar las reglas de reescritura presentadas con anterioridad.
 6. **Símbolos auxiliares:** $\{);(; ,\}$.
 
@@ -31,13 +31,6 @@ En este lenguaje se consideran términos a todas las variables y constantes, ade
 Para el cálculo de predicados, las fórmulas bien formadas pueden ser construidas siguiendo los siguientes esquemas:
 - Si $p_k^n$ es una letra predicativa n-aria y $t_1, t_2 \cdots, t_n$ son términos, entonces $p_k^n(t_1, t_2 \cdots, t_n)$ es una fórmula bien formada denominada ***fórmula atómica*** o ***átomo***.
 - Si $P$ y $Q$ son fórmulas bien formadas y $x$ es una variable, entonces $(¬P)$, $(P \rightarrow Q)$ y $((\forall x)P)$ también son fórmulas bien formadas.
-
->[!note] Tipos de Variables
->Una ***variable ligada*** es aquella que aparece junto a un cuantificador o es igual a la de un cuantificador y aparece dentro de su alcance. Aquellas variables que no están ligadas reciben el nombre de ***variables libres***.
->
->![[varaibles-libre-ligadas.png]]
->
->Las fórmulas bien formadas se dicen cerradas si no contienen variables libres.
 ## Verdad, Falsedad e Interpretaciones
 En el cálculo proposicional las fórmulas bien formadas solo estaban construidas a partir de letras proposicionales y posiblemente conectivos lógicos. Por esta razón bastaba con asignar un valor de verdad a las letras proposicionales para obtener una interpretación, esto significaba que para explicitar todas las interpretaciones posibles bastaba con construir su tabla de verdad.
 Para el cálculo de predicados la situación es más compleja, ya que para establecer si una fórmula bien formada es verdadera o falsa en una interpretación es necesario tener en cuenta:
