--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 3/2. Deduccion en el Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 3/2. Deduccion en el Calculo de Predicados.md
@@ -6,9 +6,13 @@ Hasta ahora hemos estudiado la sintaxis y la semántica del cálculo de predicad
 5. $PC_5:(\forall x)( A \rightarrow B)\rightarrow(A \rightarrow (\forall x)B)$ si $A$ no contiene ninguna aparición libre de $x$. Si $A$ implica $B$ para todos los $x$, en donde $A$ no depende de $x$, entonces $A$ implica que $B$ es cierto para todos los $x$.
 ## Variables Libres y Ligadas
 Dada una fórmula bien formada del tipo $((\forall x) P)$, la fórmula $P$ se dice que forma parte del ***alcance*** del cuantificador $(\forall x)$, por ejemplo en la fórmula $(\forall x)A(x)$ la fórmula $A(x)$ es el alcance que tiene $(\forall x)$. En una fórmula un poco más compleja como la siguiente $(\forall x)A(x, y) \rightarrow B(x)$ la fórmula $A(x, y)$ está bajo el alcance de $(\forall x)$ mientras que $B(x)$ está fuera del mismo.
-Una variable se dice ligada si la misma aparece junto a un cuantificador o es igual a la variable que aparece junto al cuantificador y se encuentra dentro de su alcance. A las variables que no cumplen con ninguna de estas condiciones se las considera ***libres***. Para mayor claridad veamos ahora unos ejemplos:
+Una variable se dice ligada si la misma aparece junto a un cuantificador o es igual a la de un cuantificador y aparece dentro de su alcance. A las variables que no cumplen con ninguna de estas condiciones se las considera ***libres***. 
+![[varaibles-libre-ligadas.png]]
+
+Para mayor claridad veamos ahora unos ejemplos:
 - En la expresión $((\forall x)A(x, y)) \rightarrow B(x)$ la variable $x$ del antecesor se encuentra ligada porque aparece en un cuantificador y además está dentro del alcance de este, mientras que las variables $y$ del antecesor y $x$ del consecuente se encuentran libres.
 - En la siguiente expresión $((\forall x)A(x, y)) \rightarrow (\exists x)B(x)$ solo $y$ se encuentra libre, ya que las demás variables se encuentran bajo el alcance de un cuantificador que tiene ligada la misma variable.
+
 ### Términos Libres para una Variable en una Fórmula Bien Formada
 Sea $A$ una fórmula bien formada y $t$ un término, $t$ se dice libre para una variable $x_i$ en $A$ si y solo si no existen apariciones libres de $x_i$ en $A$ que caen dentro del alcance de un cuantificador $(\forall x_k)$ donde $x_k$ es una variable en $t$.
 Un término sin variables claramente está libre para cualquier variable en cualquier fórmula bien formada. Un término $t$ es libre para cualquier variable en $A$ si ninguna de las variables de $t$ está ligada en $A$ y cualquier variable está siempre libre para ella misma en cualquier fórmula bien formada. Esto significa que si reemplazamos $x$, siendo $x$ una variable libre, por $t$ la variable seguiría siendo libre. Por ejemplo el término $h(x,y)$ no es libre para $y$ en la siguiente fórmula bien formada $((\forall x) p(x)) \rightarrow (\forall x)q(x, y)$, ya que $y$ está libre en el consecuente, y si reemplazamos $y$ con $h(x, y)$, se introduciría un nuevo término ligado en este caso $x$ de $h$.
@@ -22,7 +26,7 @@ Para determinar si $t$ está libre para $x$ en $A$, primero se encuentran todas 
 >
 >$$(\forall x)(\exists y)p(x, y, f(z)) \rightarrow (\exists y)p(t, y, f(z))$$
 >
->El significado de pedir que $t$ sea un término libre para $x$ en $A(x)$ es garantizar que ninguna de las variables de $t$ sea capturada por un cuantificador de manera indeseado. Por ejemplo supongamos que $A(x)$ es $(\exists y)p(x, y)$ y $t$ es $f(y)$, ahora supongamos que el dominio de nuestra interpretación son los enteros y que $(\exists y)p(x, y)$ significa $x = y$ y que $f(y)$ significa $y + 1$, en este caso una instancia de este axioma bajo esta interpretación y dominio sería el siguiente:
+>La razón detrás de pedir que $t$ sea un término libre para $x$ en $A(x)$ es garantizar que ninguna de las variables de $t$ sea capturada por un cuantificador de manera indeseado. Por ejemplo supongamos que $A(x)$ es $(\exists y)p(x, y)$ y $t$ es $f(y)$, ahora supongamos que el dominio de nuestra interpretación son los enteros y que $(\exists y)p(x, y)$ significa $x = y$ y que $f(y)$ significa $y + 1$, en este caso una instancia de este axioma bajo esta interpretación y dominio sería el siguiente:
 >$$(\forall x)(\exists y)x = y \rightarrow (\exists y) y + 1 = y$$
 >Como observar esta interpretación siempre será falsa debido a que $t$ no estaba libre para $x$, lo que provoco que el término sea alcanzado indebidamente por el cuantificador alterando su interpretación.
 ## Deducción para el Cálculo de Predicados
