--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 4/1. Substitucion y Unificacion.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 4/1. Substitucion y Unificacion.md
@@ -15,7 +15,7 @@ Dada una fórmula bien formada arbitraria existe un procedimiento para obtener u
 3. Se renombran a todas las variables ligadas de manera que aquellas variables que son diferentes tengan nombres diferentes.
 
 >[!note] Diferencia entre Variables
->Recordemos que dos variables con el mismo nombre no necesariamente son la misma, ya que el cuantificador en el alcance de esa variable determina a qué variable se hace referencia. Por ejemplo, en la siguiente sentencia $((\forall x)A(x)) \vee (\exists x)C(x)$ en este caso si bien ambas variables poseen el mismo nombre, no hacen referencia a la misma variable, por lo que son consideradas como dos variables distintas.
+>Recordemos que dos variables con el mismo nombre no necesariamente son la misma, ya que el cuantificador en el alcance de esa variable determina a qué variable se hace referencia. Por ejemplo, en la siguiente sentencia $((\forall x)A(x)) \vee (\exists x)C(x)$ si bien ambas variables poseen el mismo nombre, no hacen referencia a la misma variable, por lo que son consideradas como dos variables distintas.
 >El renombramiento de variables en el proceso de conversión a forma prenexa es clave, ya que con esto evitamos que un mismo cuantificador alcance variables que son consideradas diferentes.
 
 4. El último paso para la conversión a forma prenexa consiste en extraer los cuantificadores de la sentencia y ubicarlos a la izquierda de esta misma según el orden con el que hayan sido encontrados, a través de las siguientes transformaciones:
@@ -59,15 +59,17 @@ Una substitución es un conjunto finito de $\sigma$, posiblemente vacío, de par
 >[!info] Aclaración sobre las Condiciones
 >Las dos condiciones antes expuestas aseguran que si dos substituciones $\sigma_1$ y $\sigma_2$ son iguales como conjuntos entonces tendrán el mismo efecto al aplicarse sobre cualquier expresión. Concretamente, establecen que el orden de aplicación de las substituciones individuales no afecta al resultado final de la substitución.
 
-La manera de denotar una substitución $\sigma$ varía, ya que existen diversas formas de denotarlo, por cuestiones de practicidad la denotaremos de la siguiente manera $[(t_1, x_1),(t_2, x_2), \cdots, (t_n, x_n)]$, donde cada par de componentes $(t_i, x_i)$ expresa el requerimiento de que se reemplace con el término $t_i$ cada aparición de $x_i$. Las substituciones pueden aplicarse sobre términos o fórmulas bien formadas, por lo que usaremos la palabra ***expresión*** para referirnos a estos.
+La manera de denotar una substitución $\sigma$ varía, ya que existen diversas formas de denotarlo, por cuestiones de practicidad la denotaremos de la siguiente manera $[(t_1, x_1),(t_2, x_2), \dots, (t_n, x_n)]$, donde cada par de componentes $(t_i, x_i)$ expresa el requerimiento de que se reemplace con el término $t_i$ cada aparición de $x_i$. Las substituciones pueden aplicarse sobre términos o fórmulas bien formadas, por lo que usaremos la palabra ***expresión*** para referirnos a estos.
 Definimos a la aplicación de una sustitución $\sigma$ a una expresión $A$ denotado como $A\sigma$, como el término o fórmula bien formada obtenida de $A$ reemplazando cada aparición de $x$ por $t$ en $A$ para cada par $(t, x)$ en $\sigma$. Obsérvese en este caso que si $\sigma$ es un conjunto vacío, la aplicación de esta substitución sobre $A$ es $A$ misma.
 >[!example] Ejemplo de Aplicación de una Substitución
 >Dado un término cualquiera como lo puede ser $f(x, b)$ y un conjunto de substitución $\sigma = [(a, x)]$ el resultado de aplicar esta substitución sobre este término es $f(a, b)$, denotandose de la siguiente manera:
 >$$f(x,b)\sigma = f(x,b)[(a,x)] = f(a, b)$$
 
 $A$ se dice que es una ***instancia de una substitución*** de $B$ si existe una substitución $\sigma$ tal que $A = B\sigma$.
-Sean $\sigma = [(t_1, x_1),(t_2, x_2),\cdots, (t_n, x_n)]$ una substitución arbitraria y $\theta = [(s, v)]$ una substitución unitaria con la característica de que $v \neq x_i$ y $x_i$ no aparece en $s$ cualquiera sea $i$, tal que $1 \geq i \geq n$. Entonces definimos la ***composición*** de $\sigma$ y $\theta$ de la siguiente manera:
-$$\begin{align*} \sigma\theta &= \left[ (t_1, x_1), \quad (t_2, x_2), \quad \ldots, \quad (t_n, x_n) \right] \left[ (s, v) \right] \\ &= \left[ (t_1 \left[ (s, v) \right], x_1), \quad (t_2 \left[ (s, v) \right], x_2), \quad \ldots, \quad (t_n \left[ (s, v) \right], x_n), \quad (s, v) \right] \end{align*}$$
+Sean $\sigma = [(t_1, x_1),(t_2, x_2),\dots, (t_n, x_n)]$ una substitución arbitraria y $\theta = [(s, v)]$ una substitución unitaria con la característica de que $v \neq x_i$ y $x_i$ no aparece en $s$ cualquiera sea $i$, tal que $1 \geq i \geq n$. Entonces definimos la ***composición*** de $\sigma$ y $\theta$ de la siguiente manera:
+$$\begin{align*}
+\sigma\theta &= \left[ (t_1, x_1), (t_2, x_2), \ldots, (t_n, x_n) \right] \left[ (s, v) \right] \\ &= \left[ (t_1 \left[ (s, v) \right], x_1),(t_2 \left[ (s, v) \right], x_2), \ldots,(t_n \left[ (s, v) \right], x_n),(s, v) \right]
+\end{align*}$$
 
 >[!info] Lemas Asociados
 >- Sea $A$ una expresión y sean $\sigma$ y $\theta$ dos substituciones, entonces $(A\sigma)\theta = A(\sigma\theta)$.
@@ -84,7 +86,7 @@ Sea $\mathbb{L} = \{L_1, L_2, \cdots, L_n\}$ un conjunto de expresiones y $\thet
 
 Intuitivamente, un unificador más general de un conjunto de expresiones es aquel que hace la menor cantidad y la más general de las substituciones necesarias para unificar ese conjunto de expresiones. Claramente, es posible que para un conjunto de expresiones particular no exista una substitución unificadora, sin embargo, si existiera un unificador entonces siempre es posible hallar un unificador más general.
 >[!tldr] Conjunto de Desacuerdo
->Sea $\mathbb{L} = \{L_1, L_2, \cdots, L_n\}$ un conjunto de expresiones. El ***conjunto de desacuerdo*** $\mathcal{D}$ de $\mathbb{L}$ es el conjunto de subexpresiones bien formadas de expresiones de $\mathbb{L}$ que comienza en la primera posición, de izquierda a derecha, en la que no todas las expresiones coinciden. Por ejemplo dado $\mathbb{L} = \{p(x, f(x, g(y)), v), p(x, f(x, z), w)\}$ el conjunto de desacuerdo es $\mathcal{D} = \{g(y), z\}$, ya que son las primeras subexpresiones en la que ambas expresiones principales disciernen.
+>Sea $\mathbb{L} = \{L_1, L_2, \cdots, L_n\}$ un conjunto de expresiones. El ***conjunto de desacuerdo*** $\mathcal{D}$ de $\mathbb{L}$ es el conjunto de subexpresiones bien formadas de expresiones de $\mathbb{L}$ que comienza en la primera posición, de izquierda a derecha, en la que no todas las expresiones coinciden. Por ejemplo dado $\mathbb{L} = \{p(x, f(x, g(y)), v), p(x, f(x, z), w)\}$ el conjunto de desacuerdo es $\mathcal{D} = \{z, g(y)\}$, ya que son las primeras subexpresiones en la que ambas expresiones principales disciernen.
 >Nótese que dado un determinado conjunto $\mathbb{L}$ de expresiones, el conjunto de desacuerdo de $\mathbb{L}$ puede ser: 
 >
 >1. El mismo conjunto, en tal caso $\mathbb{L}$ no es unificable.
@@ -102,7 +104,7 @@ Intuitivamente, un unificador más general de un conjunto de expresiones es aque
 El proceso de unificación de Robinson es un algoritmo fundamental, utilizado para determinar si existe una sustitución que hace que dos expresiones lógicas sean idénticas. Este procedimiento cuenta con los siguientes pasos:
 1. Sea $\mathbb{L}$ un conjunto de expresiones, $\theta_0 = \varepsilon$ y $k = 0$
 2. Se actualiza el valor de $k$ tal que $k \leftarrow k + 1$. Si los elementos de $\mathbb{L}\theta_k$ son todos iguales entonces se asigna $\theta_0 \leftarrow \theta_k$ y se detiene emitiendo $\theta_0$ como substitución unificadora. Si $\mathbb{L}\theta_k$ no es un conjunto unitario el procedimiento continúa.
-3. Sea $s_k$ y $t_k$ las dos expresiones minimales en el orden lexicográfico dentro del conjunto de desacuerdos de $\mathbb{L}\theta_k$. Si $s_k$ es una variable y $s_k$ no aparece en $t_k$ entonces $\theta_{k + 1} \leftarrow \theta_k[(t_k, s_k)]$ y volver a realizar el paso anterior. En caso contrario se detiene el procedimiento, ya que no existe unificación.
+3. Sea $s_k$ y $t_k$ las dos expresiones minimales en el orden lexicográfico dentro del conjunto de desacuerdos de $\mathbb{L}\theta_k$. Si $s_k$ es una variable y $s_k$ no aparece en $t_k$ entonces $\theta_{k + 1} \leftarrow \theta_k[(t_k, s_k)]$. Posteriormente, se vuelve a realizar el paso anterior. En caso contrario se detiene el procedimiento, ya que no existe unificación.
 
 >[!note] Occur Check
 >La comprobación realizada por el tercer paso en el cual se comprueba si $s_k$ es una variable y no aparece en $t_k$ recibe el nombre de ***occur check*** y se asegura de realizar de manera correcta las sustituciones e instanciamientos de variables.
