--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 4/2. Resolucion para el Calculo de Predicados.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 4/2. Resolucion para el Calculo de Predicados.md
@@ -1,16 +1,16 @@
 Para poder calcular resolventes en $\mathcal{P}$ debemos extender la idea de resolvente básica que fue dada para $\mathcal{L}$. Es necesario generalizar la definición de resolvente para lograr calcular resolventes en $\mathcal{P}$. Fundamentalmente, para esto es necesario definir como calcular resolventes entre cláusulas no básicas.
 La definición de resolvente para cláusulas arbitrarias es una definición general que no requiere especificar como se encuentra el unificador más general. Sin embargo, para encontrar el unificador más general es posible utilizar el procedimiento de cálculo de substituciones unificadoras más generales, o unificador más general, utilizando el ***procedimiento de unificación de Robinson***.
 En el cálculo de predicados una unificación de dos cláusulas arbitrarias $C_1$ y $C_2$ es una tercera cláusula $C_3$ obtenida a partir del siguiente procedimiento:
-1. Si $w_1, w_2, \cdots, w_m$ son las variables en $C_2$ y la variable de mayor índice que aparece en $C_1 \cup C_2$ de acuerdo al orden lexicográfico es $x_k$, sea $\theta$ la siguiente substitución:
+1. Si $w_1, w_2, \dots, w_m$ son las variables en $C_2$ y $x_k$ la variable de mayor índice que aparece en $C_1 \cup C_2$ de acuerdo al orden lexicográfico, sea $\theta$ la siguiente substitución:
 $$\theta = [(x_{k+1},w_1), (x_{k+2},w_2), ..., (x_{k+m},w_m)]$$
 
 >[!note] Importancia de este Paso
 >Esta substitución es un renombre de variables de manera tal que luego de aplicarla a $C_2$ ninguna de las variables que aparecen en $C_2\theta$ aparece en $C_1$. Este proceso se describe como ***separación estándar de variables***.
 
-2. Si existen un par de literales $\mathbb{L} = \{L_1, L_2, \cdots, L_r\} \subseteq C_1$ y $\mathbb{M}\theta = \{\mathbb{M}_1\theta, \mathbb{M}_2\theta, \cdots, \mathbb{M}_s\theta\} \subseteq C_2\theta$ tales que el conjunto constituido de la siguiente manera $\mathbb{L} \cup ¬\mathbb{M}\theta = \{L_1, L_2, \cdots, L_r, ¬M_1\theta, ¬M_2\theta, \cdots, ¬M_s\theta\}$ es unificable por un cuantificador más general $\rho$. En ese caso $\mathbb{L}\rho$ y $\mathbb{M}\theta\rho$ son literales complementarios, de hecho ambos son conjuntos con un solo elemento, los cuales son literales complementarios.
+2. Si existen un par de literales $\mathbb{L} = \{L_1, L_2, \dots, L_r\} \subseteq C_1$ y $\mathbb{M}\theta = \{\mathbb{M}_1\theta, \mathbb{M}_2\theta, \dots, \mathbb{M}_s\theta\} \subseteq C_2\theta$ tales que el conjunto constituido de la siguiente manera $\mathbb{L} \cup ¬\mathbb{M}\theta = \{L_1, L_2, \dots, L_r, ¬M_1\theta, ¬M_2\theta, \dots, ¬M_s\theta\}$ es unificable por un cuantificador más general $\rho$. En ese caso $\mathbb{L}\rho$ y $\mathbb{M}\theta\rho$ son literales complementarios, de hecho ambos son conjuntos con un solo elemento, los cuales son literales complementarios.
 
 Cualquier par de cláusulas tiene a lo sumo un número finito de resolventes dado que existe solo un número finito de pares $\mathbb{L}$ y $\mathbb{M}$. Para cada uno de esos pares existe a lo sumo una substitución más general $\rho$ que los unifica. Una deducción por resolución para el cálculo de predicados se define de la misma manera que para el cálculo proposicional, con la diferencia que se reemplaza el término resolvente fija por resolvente.
-Una ***derivación por resolución*** de una cláusula $C$ a partir de un conjunto de cláusulas $S$, denominadas cláusulas input, es una secuencia de cláusulas $C_1, C_2, \cdots, C_n$ tal que, $C_n$ es $C$ y para cada $i / 1 \leq i \leq n$, $C_i$ o bien es un elemento de $S$, o bien es una resolvente entre $C_m$ y $C_k$, donde $m, k < i$. La derivación es finita o infinita de acuerdo a la longitud de la secuencia, esto quiere decir que la resolución para el cálculo de predicados no es decidible.
+Una ***derivación por resolución*** de una cláusula $C$ a partir de un conjunto de cláusulas $S$, denominadas cláusulas input, es una secuencia de cláusulas $C_1, C_2, \dots, C_n$ tal que, $C_n$ es $C$ y para cada $i / 1 \leq i \leq n$, $C_i$ o bien es un elemento de $S$, o bien es una resolvente entre $C_m$ y $C_k$, donde $m, k < i$. La derivación es finita o infinita de acuerdo a la longitud de la secuencia, esto quiere decir que la resolución para el cálculo de predicados no es decidible.
 Una deducción por resolución de la cláusula $\bot$ a partir de un conjunto de cláusulas $S$ se denomina ***refutación***.
 >[!note] Notación y Definición de las Notaciones
 >Gran parte de las definiciones asociadas a la resolvente ya fueron expuestas en la unidad 2 cuando hablabamos de la [[2. Deduccion y Computacion del Calculo Proposicional#Completitud y Computabilidad del Cálculo Proposicional|computación del cálculo proposicional]].
@@ -37,7 +37,7 @@ Sea $S$ un conjunto finito de cláusulas y sea $L$ una cláusula unitaria. Se co
 
 Dicho esto $S_1$ es satisfacible si y solo si $S$ es satisfacible. Para ver esto más claro pongamos un ejemplo, supongamos que tenemos el siguiente conjunto de cláusulas $S = \{q(a), q(a) \vee p(c), r(a) \vee p(b), ¬q(a) \vee s(a) \vee r(b), s(b)\}$, en este caso el nuevo conjunto, resultante de eliminar el literal $q(a)$ queda conformado de la siguiente manera $S_1 = \{r(a) \vee p(b), s(a) \vee r(b), s(b)\}$. Nótese que es este caso aquellas cláusulas que tenían un literal complementario de $q(a)$ fueron eliminados de la cláusula.
 #### Separación
-Sea $S = \{C_1 \vee A, \cdots, C_m \vee A, D_1 \vee ¬A, \cdots ,\vee D_n \vee ¬A, E_1, \cdots, E_p\}$ un conjunto finito de cláusulas donde $A$ es un átomo y los $C_i$, $D_j$ y $E_k$ no contienen ni $A$ ni a $¬A$. Sean $S_1 = \{C_1, \cdots, C_m, E_1, \cdots, E_p\}$ y $S_2 = \{D_1, \cdots, D_n, E_1, \cdots E_p\}$ dos subconjuntos construidos a partir de $S$. Entonces $S$ es insatisfacible si y solo si tanto $S_1$ como $S_2$ son insatisfacibles.
+Sea $S = \{C_1 \vee A, \dots, C_m \vee A, D_1 \vee ¬A, \dots ,\vee D_n \vee ¬A, E_1, \dots, E_p\}$ un conjunto finito de cláusulas donde $A$ es un átomo y los $C_i$, $D_j$ y $E_k$ no contienen ni $A$ ni a $¬A$. Sean $S_1 = \{C_1, \dots, C_m, E_1, \dots, E_p\}$ y $S_2 = \{D_1, \dots, D_n, E_1, \dots E_p\}$ dos subconjuntos construidos a partir de $S$. Entonces $S$ es insatisfacible si y solo si tanto $S_1$ como $S_2$ son insatisfacibles.
 Para ver esta propiedad con más claridad supongamos que tenemos el siguiente conjunto de cláusulas $S = \{s(b), ¬s(b) \vee ¬p(b)\}$, en este caso nuestros conjuntos quedarían conformados de la siguiente manera:
 - $S_1 = \{\bot\}$ debido a que no existe ninguna otra cláusula que no contenga $A$ o $¬A$.
 - $S_2 = \{¬p(b)\}$ porque tomamos a $¬p(b)$ como $D$ y basándonos en esto se construye el segundo conjunto.
@@ -57,7 +57,7 @@ Nótese que la resolución input y resolución unitaria son equivalentes en el s
 >[!tldr] Completitud de la Resolución Unaria y la Resolución Input
 >Si bien hasta ahora se ha dicho que ambos procesos de resolución son incompletos, es posible demostrar que ambas son completas sobre conjuntos de cláusulas de Horn.
 #### Conjunto de Soporte
-Para probar un teorema $C$ a partir de un conjunto de axiomas $C_1, C_2, \cdots,C_n$ se intenta demostrar que $C_1 \wedge C_2 \wedge \cdots \wedge C_n \wedge ¬C$ es un conjunto insatisfacible. Resulta razonable, entonces suponer que el conjunto de axiomas inicial $\{ C_1, C_2, \cdots, C_n \}$ es satisfacible, de otra forma se trivializa el problema.
+Para probar un teorema $C$ a partir de un conjunto de axiomas $C_1, C_2, \dots,C_n$ se intenta demostrar que $C_1 \wedge C_2 \wedge \dots \wedge C_n \wedge ¬C$ es un conjunto insatisfacible. Resulta razonable, entonces suponer que el conjunto de axiomas inicial $\{ C_1, C_2, \dots, C_n \}$ es satisfacible, de otra forma se trivializa el problema.
 Como el conjunto de axiomas, formado por cláusulas axioma, es satisfacible, si se agregan resolventes calculándolas solo a partir de ellas el conjunto resultante también es satisfacible. Por lo tanto, no es posible generar una refutación usando solo el conjunto de axiomas. La estrategia de ***conjunto de soporte*** usa este hecho evitando utilizar solo cláusulas axioma.
 Un subconjunto $S_1$ de un conjunto $S$ de cláusulas se denomina un conjunto de soporte si y solo si $S \ – \ S_1$ es satisfacible. Una resolución por conjunto de soporte es una resolución en la que dos cláusulas se utilizan en una operación de resolución solo si alguna de ellas no está en $S \ – \ S_1$. Una derivación por conjunto de soporte es una derivación en la que cada resolución es por conjunto de soporte. Mientras que una refutación por conjunto de soporte es una derivación por conjunto de soporte de $\bot$.
 Sea $S$ un conjunto de cláusulas insatisfacibles. La resolución por conjunto de soporte es compatible en el siguiente sentido, si $S_1$ es un subconjunto de $S$, tal que $S \ - \ S_1$ es satisfacible, entonces existe una deducción por conjunto de soporte de $\bot$ a partir de $S$ en la que $S_1$ es el conjunto de soporte.
@@ -65,7 +65,7 @@ Veamos ahora un pequeño ejemplo, sea $S = \{¬p(x, y) \vee ¬q(x), p(x, y) \vee
 ![[resolucion-conjunto-soporte.png]]
 #### Resolución Lineal
 La resolución lineal es una extensión de la resolución input, en la cual durante el proceso de deducción se utiliza como cláusulas madres a una cláusula input o una cláusula ancestral de una de las cláusulas madre.
-Sea $S$ un conjunto de cláusulas y sea $C$ una cláusula en $S$. Una derivación lineal de $C_n$ a partir de $S$ con cláusula top $C$ es una sentencia finita de cláusulas $C_0 = C, C_1, \cdots, C_n$ tal que para cada $i= 0,1, \cdots, n-1$:
+Sea $S$ un conjunto de cláusulas y sea $C$ una cláusula en $S$. Una derivación lineal de $C_n$ a partir de $S$ con cláusula top $C$ es una sentencia finita de cláusulas $C_0 = C, C_1, \dots, C_n$ tal que para cada $i= 0,1, \dots, n-1$:
 1. Cada $C_{i+1}$ es una resolvente de $C_i$, llamada cláusula central o cláusula maternal cercana, y otra cláusula $B_i$.
 2. Cada cláusula lateral $B_i$ es o un miembro de $S$ y en tal caso $B_i$ es la cláusula input maternal de $C_{i+1}$ o bien en un ancestro de algún $C_k$ y en ese caso $B_i$ es una cláusula maternal lejana de $C_{i+1}$.
 
@@ -74,4 +74,4 @@ Se dice que cada cláusula $C_{i+1}$ fue obtenida por resolución lineal. En for
 >Sea $S$ un conjunto de cláusulas y sea $C$ una cláusula de $S$. Un árbol de búsqueda $\mathcal{T}$ se define de la siguiente manera:
 >
 >- La raíz de $\mathcal{T}$ está etiquetada como $C$, es decir, es la cláusula top.
->- Supongamos que $N$ es un nodo en $\mathcal{T}$ y que todos los nodos desde la raíz hasta $N$ están etiquetados $C_1 = C, C_2, \cdots, C_n$. Entonces para cada derivación lineal $C_1, C_2, \cdots, C_n, C_{n+1}$ cada nodo etiquetado como $C_{n+1}$ es una descendiente inmediato de $N$.
+>- Supongamos que $N$ es un nodo en $\mathcal{T}$ y que todos los nodos desde la raíz hasta $N$ están etiquetados $C_1 = C, C_2, \dots, C_n$. Entonces para cada derivación lineal $C_1, C_2, \dots, C_n, C_{n+1}$ cada nodo etiquetado como $C_{n+1}$ es una descendiente inmediato de $N$.
