--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 5/1. Semantica y Computacion de un Programa Logico.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 5/1. Semantica y Computacion de un Programa Logico.md
@@ -40,7 +40,7 @@ La elección de la regla de búsqueda determinará si es posible la refutación 
 - **Búsqueda a lo ancho**: Garantiza que se encontrará la rama de éxito siempre que la misma exista.
 - **Búsqueda en profundidad**: Existe la posibilidad de explorar ramas no terminantes.
 
-Prolog utiliza búsqueda en profundidad, ya que la implementación es más sencilla y utilizar menos recursos para su ejecución. Prolog utiliza una lista donde guarda los puntos en los cuales bifurca en árbol, de esta forma en caso de un fallo el programa sabe donde volver para seguir recorriendo la próxima rama.
+Prolog utiliza búsqueda en profundidad, ya que la implementación es más sencilla y utilizar menos recursos para su ejecución. Prolog utiliza una lista donde guarda los puntos en los cuales bifurca el árbol, de esta forma en caso de un fallo el programa sabe donde volver para seguir recorriendo la próxima rama.
 En la lógica, un conjunto de cláusulas puede ser verdadera o falsa, independiente del orden en el que estas se evalúen. En Prolog el programador se ve obligado a pensar en términos del control de ejecución de sus programas ordenando cuidadosamente las cláusulas y literales con el fin de evitar ejecuciones no terminantes, dado que las cláusulas se seleccionan de arriba abajo y los átomos de las metas de izquierda a derecha.
 Otra diferencia es que Prolog incluye predicados de E/S, aritméticos y de corte que recorta el árbol SLD. Este último realmente afecta la estrategia de evaluación en los programas, y su uso pone en cuestión el carácter auténticamente declarativo del lenguaje.
 >[!note] Prolog y la Monotonicidad
@@ -75,7 +75,7 @@ Sea $\mathbb{L}$ un lenguaje de primer orden. Una interpretación de Herbrand de
 - Si $p$ es una letra predicativa n-aria en $\mathbb{L}$ se le asigna un subconjunto de $\mathscr{H}_\mathbb{L}^n$, es decir, el conjunto de todas las n-tuplas de elementos de $\mathscr{H}_\mathbb{L}$. El significado de $p$ es el conjunto de n-tuplas $\{(t_2, t_2, \dots, t_n) \in \mathscr{H}_\mathbb{L}^n \ / \ \mathscr{I} \vDash p(t_2, t_2, \dots, t_n)\}$, es decir, las tuplas $(t_2, t_2, \dots, t_n)$ de $\mathscr{H}_\mathbb{L}^n$ tales que la interpretación $\mathscr{I}$ hace verdadera a $p(t_2, t_2, \dots, t_n)$.
 
 Dado un conjunto de fórmulas cerradas $S$, los elementos lingüísticos involucrados en sus cláusulas, es decir, sus constantes, letras funcionales y predicativas, definen un lenguaje particular que se denomina lenguaje de $S$.
-Se dice que una interpretación $\mathscr{I}$ es un modelo para un conjunto $S$ de fórmulas bien formadas en $P$, si todas las fórmulas bien formadas de $S$ son verdaderas en dicha interpretación $\mathscr{I}$. Una interpretación de Herbrand de $S$ es una interpretación de Herbrand del lenguaje de $S$. Al mismo tiempo, un modelo de Herbrand de $S$ es una interpretación de Herbrand de $S$ que al mismo tiempo es un modelo de $S$. Entonces, dado un programa lógico $P$, una interpretación de Herbrand de $P$ es una interpretación de Herbrand del lenguaje de $P$.
+Se dice que una interpretación $\mathscr{I}$ es un modelo para un conjunto $S$ de fórmulas bien formadas en $P$, si todas las fórmulas bien formadas de $S$ son verdaderas en dicha interpretación $\mathscr{I}$. Una interpretación de Herbrand de $S$ es una interpretación de Herbrand del lenguaje de $S$. Un modelo de Herbrand de $S$ es una interpretación de Herbrand de $S$ que al mismo tiempo es un modelo de $S$. Entonces, dado un programa lógico $P$, una interpretación de Herbrand de $P$ es una interpretación de Herbrand del lenguaje de $P$.
 Dado un programa $P$, es posible identificar una interpretación de Herbrand de $P$ con un subconjunto de los elementos de la Base de Herbrand de $P$. Dada una interpretación de Herbrand arbitraria $\mathscr{I}$ entonces el subconjunto de $\mathscr{B}_P$ correspondiente a esa interpretación, es el subconjunto de átomos fijos que son verdaderos en la interpretación $\mathscr{I}$.
 Recíprocamente, dado un subconjunto arbitrario de $\mathscr{B}_P$ existe la correspondiente interpretación de Herbrand definida especificando que el mapeo asignado a una letra predicativa mapea una tupla de forma correcta, si el átomo con la misma letra predicativa y los mismos argumentos está en el subconjunto.
 Sea $P$ un programa definido y sea $\{M_i\}_{i \in \mathscr{I}}$ un conjunto no vacío de modelos de Herbarnd de $P$, entonces:
